out/production/Online sop/objects/Raw_materials__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contacts__c</referenceTo>
        <relationshipLabel>Raw materials</relationshipLabel>
        <relationshipName>Raw_materials</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_of_receipt__c</fullName>
        <label>Date of receipt</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Made_in__c</fullName>
        <label>Made in</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>China</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number__c</fullName>
        <label>Number</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quality__c</fullName>
        <label>Quality</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Store__c</fullName>
        <label>Store</label>
        <referenceTo>Store__c</referenceTo>
        <relationshipLabel>Raw materials</relationshipLabel>
        <relationshipName>Raw_materials</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Raw material</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Raw materials Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Raw materials</pluralLabel>
    <recordTypes>
        <fullName>Provided</fullName>
        <active>true</active>
        <label>Provided</label>
    </recordTypes>
    <recordTypes>
        <fullName>Used</fullName>
        <active>true</active>
        <label>Used</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>